correct spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1042,6 +1042,10 @@ p {
   color: #E80E08 !important;
 }
 
+.press-one-half {
+  margin-top: -60px;
+}
+
 
 /* trove */
 
